Tailwind CSS Navbar

--- a/TailwindCSS/src/output.css
+++ b/TailwindCSS/src/output.css
@@ -1301,6 +1301,9 @@
   .gap-5 {
     gap: calc(var(--spacing) * 5);
   }
+  .gap-10 {
+    gap: calc(var(--spacing) * 10);
+  }
   .gap-40 {
     gap: calc(var(--spacing) * 40);
   }
@@ -1554,6 +1557,9 @@
   }
   .bg-\[var\(--my_variable\)\] {
     background-color: var(--my_variable);
+  }
+  .bg-black {
+    background-color: var(--color-black);
   }
   .bg-blue-200 {
     background-color: var(--color-blue-200);
@@ -2495,6 +2501,16 @@
   .md\:ml-auto {
     @media (width >= 48rem) {
       margin-left: auto;
+    }
+  }
+  .md\:flex {
+    @media (width >= 48rem) {
+      display: flex;
+    }
+  }
+  .md\:hidden {
+    @media (width >= 48rem) {
+      display: none;
     }
   }
   .md\:flex-row {
